# DiaballikBot

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
src/: AI.cpp  AI.h  CMakeLists.txt  CommunicationHandler.cpp  CommunicationHandler.h  GTPParser.cpp  GTPParser.h  MCTNode.cpp  MCTNode.h  MCTSAI.cpp  MCTSAI.h  NullAI.cpp  NullAI.h  Singleton.cpp  Singleton.h  botConstants.h  botEnums.h  main.cpp
